colour in progress

--- a/CamoWorms/CamoWorms.ipynb
+++ b/CamoWorms/CamoWorms.ipynb
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1021,
+   "execution_count": 1048,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,14 +971,15 @@
     "    # Display the masked image\n",
     "\n",
     "    m[non_zero_mask] -= round(clew[worm_index-1].colour * 255)\n",
+    "    magnitude = np.linalg.norm(m.flatten())\n",
     "    plt.imshow(m,  cmap='gray')\n",
     "    plt.gca().invert_yaxis()\n",
-    "    return m"
+    "    return 1/(magnitude / len(m[non_zero_mask]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1022,
+   "execution_count": 1049,
    "metadata": {},
    "outputs": [
     {
@@ -999,22 +1000,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1033,
+   "execution_count": 1055,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       ...,\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0]], dtype=uint8)"
+       "0.1159140348634672"
       ]
      },
-     "execution_count": 1033,
+     "execution_count": 1055,
      "metadata": {},
      "output_type": "execute_result"
     },
