colour in progress

--- a/CamoWorms/CamoWorms.ipynb
+++ b/CamoWorms/CamoWorms.ipynb
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1762,
+   "execution_count": 1789,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,16 +976,17 @@
     "\n",
     "    orig[non_zero_masked] -= round(clew[worm_index - 1].colour * 255)\n",
     "    orig[~non_zero_masked] = 255\n",
-    "    magnitude = np.linalg.norm(orig[non_zero_masked])\n",
+    "    magnitude = np.linalg.norm(orig[non_zero_masked]).mean()\n",
+    "    print(orig[non_zero_masked], magnitude)\n",
     "    plt.imshow( orig, cmap='gray')  # Display the modified original image\n",
     "    plt.gca().invert_yaxis()\n",
     "    \n",
-    "    return 1 / (magnitude / len(orig[non_zero_masked]))\n"
+    "    return 1 / magnitude \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1763,
+   "execution_count": 1790,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1764,
+   "execution_count": 1791,
    "metadata": {},
    "outputs": [
     {
@@ -1028,29 +1029,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1765,
+   "execution_count": 1793,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[255 255 255 ... 255 255 255]\n",
-      " [255 255 255 ... 255 255 255]\n",
-      " [255 255 255 ... 255 255 255]\n",
-      " ...\n",
-      " [255 255 255 ... 255 255 255]\n",
-      " [255 255 255 ... 255 255 255]\n",
-      " [255 255 255 ... 255 255 255]]\n"
+      "[  32   -1  -31   56   65   23  -13  -13   41   65   35    2   -4    8\n",
+      "   32   23  -13  -31  -34  -28  -34  -37  134  125  134  140   65   62\n",
+      "  125  140  134   62   65  125   77   74   47   65  101  101   89   92\n",
+      "  104    2   44   77   80  134  128  143  152  140  158  170  188  200\n",
+      "  140  101  140  194  212  230  194  167  200  173  -82 -226 -181 -124\n",
+      " -109 -202 -199 -142 -121 -106 -163 -127  -79  -67  -85 -175 -151 -106\n",
+      "  -82 -109 -229 -145 -235 -226 -172 -148 -238 -223 -163 -139 -160 -229\n",
+      " -196 -184 -172 -235 -235 -199 -142 -232 -205 -133  -97 -133 -157  -88\n",
+      "  -94 -109 -142 -187  -88  -91 -118 -187 -205  -73  -79 -130 -223 -238\n",
+      "  -97 -124 -190  -43 -109 -142  -22  -49 -106 -145 -148  -37  -70 -139\n",
+      " -190 -172  -49  -73 -106 -157 -175 -106  -94 -100 -106 -112 -148  -82\n",
+      "  -70  -73 -130 -214 -121  -88  -73 -145 -226 -160 -115  -94 -145 -205\n",
+      " -163 -121 -109 -130  -97  -61  -76  -79  -73  -58  -61  -85 -100 -106\n",
+      " -112  -94  -70  -91 -100 -106 -121 -130  -73  -79 -103 -130] 1834.5538967280302\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.10574777898103924"
+       "0.0005450916442321609"
       ]
      },
-     "execution_count": 1765,
+     "execution_count": 1793,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1068,13 +1076,6 @@
    "source": [
     "color_cost(original_image, masked_img, 3, clew)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
