renamed camo_cost colour_cost

--- a/CamoWorms/CamoWorms.ipynb
+++ b/CamoWorms/CamoWorms.ipynb
@@ -1,7 +1,8 @@
 {
  "cells": [
   {
-   "attachments": {},
+   "attachments": {
+   },
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false
@@ -28,7 +29,8 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+   ],
    "source": [
     "# Imports\n",
     "\n",
@@ -41,6 +43,7 @@
     "import matplotlib.patches as mpatches\n",
     "import matplotlib.bezier as mbezier\n",
     "from sklearn.metrics.pairwise import euclidean_distances\n",
+    "import copy\n",
     "\n",
     "rng = np.random.default_rng()\n",
     "Path = mpath.Path\n",
@@ -53,7 +56,8 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+   ],
    "source": [
     "# Global variables\n",
     "\n",
@@ -85,8 +89,10 @@
        "<Figure size 460.8x345.6 with 1 Axes>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "execution_count": 1544,
+     "metadata": {
+     },
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -111,7 +117,9 @@
   {
    "cell_type": "code",
    "execution_count": 1545,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -135,7 +143,8 @@
       ]
      },
      "execution_count": 1545,
-     "metadata": {},
+     "metadata": {
+     },
      "output_type": "execute_result"
     }
    ],
@@ -149,7 +158,8 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+   ],
    "source": [
     "class Camo_Worm:\n",
     "    def __init__(self, x, y, r, theta, deviation_r, deviation_gamma, width, colour):\n",
@@ -197,7 +207,8 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+   ],
    "source": [
     "class Drawing:\n",
     "    def __init__ (self, image):\n",
@@ -237,7 +248,8 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+   ],
    "source": [
     "# Example of a random worm. You may do this differently.\n",
     "\n",
@@ -265,7 +277,8 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+   ],
    "source": [
     "# Initialise a random clew\n",
     "\n",
@@ -290,8 +303,10 @@
        "<Figure size 460.8x345.6 with 1 Axes>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "execution_count": 1550,
+     "metadata": {
+     },
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -317,8 +332,10 @@
        "<Figure size 460.8x345.6 with 1 Axes>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "execution_count": 1551,
+     "metadata": {
+     },
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -335,7 +352,8 @@
    ]
   },
   {
-   "attachments": {},
+   "attachments": {
+   },
    "cell_type": "markdown",
    "metadata": {
     "collapsed": false
@@ -346,17 +364,23 @@
    ]
   },
   {
-   "attachments": {},
+   "attachments": {
+   },
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# ------------------------------------------------------------------------------"
    ]
   },
   {
-   "attachments": {},
+   "attachments": {
+   },
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Distance between worms"
    ]
@@ -367,7 +391,8 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+   ],
    "source": [
     "import matplotlib.colors as mcolors"
    ]
@@ -375,8 +400,11 @@
   {
    "cell_type": "code",
    "execution_count": 1553,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
    "source": [
     "# Initialise clew\n",
     "clew = initialise_clew(3, image.shape, (40, 30, 1))"
@@ -385,7 +413,9 @@
   {
    "cell_type": "code",
    "execution_count": 1554,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -394,8 +424,10 @@
        "<Figure size 460.8x345.6 with 1 Axes>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "execution_count": 1554,
+     "metadata": {
+     },
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -411,8 +443,11 @@
   {
    "cell_type": "code",
    "execution_count": 1555,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
    "source": [
     "# Make list of intermediade points + extrema control points (not the middle point) for each worm\n",
     "all_points = []\n",
@@ -423,8 +458,11 @@
   {
    "cell_type": "code",
    "execution_count": 1556,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
    "source": [
     "# matrix for shortest distances\n",
     "D = np.zeros((len(clew),len(clew)))\n",
@@ -453,7 +491,9 @@
   {
    "cell_type": "code",
    "execution_count": 1557,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -462,8 +502,10 @@
        "<Figure size 460.8x345.6 with 1 Axes>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "execution_count": 1557,
+     "metadata": {
+     },
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -479,9 +521,12 @@
    ]
   },
   {
-   "attachments": {},
+   "attachments": {
+   },
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Make circular mask and find image intensity"
    ]
@@ -489,8 +534,11 @@
   {
    "cell_type": "code",
    "execution_count": 1558,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
    "source": [
     "clew = initialise_clew(5, image.shape, (40, 30, 1))"
    ]
@@ -498,8 +546,11 @@
   {
    "cell_type": "code",
    "execution_count": 1559,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
    "source": [
     "### The following function is inspired by answers given on this page:\n",
     "# https://stackoverflow.com/questions/44865023/how-can-i-create-a-circular-mask-for-a-numpy-array\n",
@@ -521,7 +572,9 @@
   {
    "cell_type": "code",
    "execution_count": 1560,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -541,8 +594,10 @@
        "<Figure size 460.8x345.6 with 1 Axes>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "execution_count": 1560,
+     "metadata": {
+     },
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -570,7 +625,9 @@
   {
    "cell_type": "code",
    "execution_count": 1561,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -579,8 +636,10 @@
        "<Figure size 460.8x345.6 with 1 Axes>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "execution_count": 1561,
+     "metadata": {
+     },
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -596,8 +655,11 @@
   {
    "cell_type": "code",
    "execution_count": 1562,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
    "source": [
     "## ALTERNATIVELY"
    ]
@@ -605,8 +667,11 @@
   {
    "cell_type": "code",
    "execution_count": 1563,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
    "source": [
     "worm = random_worm(image.shape, (40, 30, 1))"
    ]
@@ -614,7 +679,9 @@
   {
    "cell_type": "code",
    "execution_count": 1564,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -623,8 +690,10 @@
        "<Figure size 460.8x345.6 with 1 Axes>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "execution_count": 1564,
+     "metadata": {
+     },
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -645,7 +714,9 @@
   {
    "cell_type": "code",
    "execution_count": 1565,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -661,8 +732,10 @@
        "<Figure size 460.8x345.6 with 1 Axes>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "execution_count": 1565,
+     "metadata": {
+     },
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -677,9 +750,12 @@
    ]
   },
   {
-   "attachments": {},
+   "attachments": {
+   },
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Basic Algorithm"
    ]
@@ -687,8 +763,11 @@
   {
    "cell_type": "code",
    "execution_count": 1566,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
    "source": [
     "import copy\n",
     "class Camo_Worm_Solution:\n",
@@ -724,10 +803,13 @@
     "    def calc_dist_cost(self, worm):\n",
     "        return 1 / (worm.shortest_dist + worm.width)\n",
     "    \n",
+    "    def calc_colour_cost(self, worm):\n",
+    "        return 0\n",
+    "    \n",
     "    def calc_unweighted_costs(self, worm):\n",
     "        worm.size = worm.approx_length() * worm.width\n",
     "        worm.bend = worm.dr / worm.r\n",
-    "        worm.camo_cost = 0\n",
+    "        worm.colour_cost = self.calc_colour_cost(worm)\n",
     "        worm.dist_cost = self.calc_dist_cost(worm)\n",
     "    \n",
     "    def evolve_worm(self, worm):\n",
@@ -803,8 +885,11 @@
   {
    "cell_type": "code",
    "execution_count": 1567,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
    "source": [
     "initial_weights = np.array((-1,1,1,1)) # size weight, bend weight, camo weight, dist weight\n",
     "test_clew = Camo_Worm_Solution(image, weights=initial_weights)"
@@ -813,7 +898,9 @@
   {
    "cell_type": "code",
    "execution_count": 1568,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -822,8 +909,10 @@
        "<Figure size 460.8x345.6 with 1 Axes>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "execution_count": 1568,
+     "metadata": {
+     },
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -832,8 +921,10 @@
        "<Figure size 460.8x345.6 with 1 Axes>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "execution_count": 1568,
+     "metadata": {
+     },
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -842,8 +933,10 @@
        "<Figure size 460.8x345.6 with 1 Axes>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "execution_count": 1568,
+     "metadata": {
+     },
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -852,8 +945,10 @@
        "<Figure size 460.8x345.6 with 1 Axes>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "execution_count": 1568,
+     "metadata": {
+     },
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -862,8 +957,10 @@
        "<Figure size 460.8x345.6 with 1 Axes>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "execution_count": 1568,
+     "metadata": {
+     },
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -872,8 +969,10 @@
        "<Figure size 460.8x345.6 with 1 Axes>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "execution_count": 1568,
+     "metadata": {
+     },
+     "output_type": "execute_result"
     },
     {
      "name": "stdout",
@@ -889,9 +988,12 @@
    ]
   },
   {
-   "attachments": {},
+   "attachments": {
+   },
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Color"
    ]
@@ -899,7 +1001,9 @@
   {
    "cell_type": "code",
    "execution_count": 1583,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -908,8 +1012,10 @@
        "<Figure size 460.8x345.6 with 1 Axes>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "execution_count": 1583,
+     "metadata": {
+     },
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -926,7 +1032,9 @@
   {
    "cell_type": "code",
    "execution_count": 1619,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -935,8 +1043,10 @@
        "<Figure size 460.8x345.6 with 1 Axes>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "execution_count": 1619,
+     "metadata": {
+     },
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -959,8 +1069,11 @@
   {
    "cell_type": "code",
    "execution_count": 1870,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
    "source": [
     "def color_cost(original_image,masked_image, worm_index, clew):\n",
     "    # masked for a particular worm (example: worm 4)\n",
@@ -987,7 +1100,9 @@
   {
    "cell_type": "code",
    "execution_count": 1871,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -996,8 +1111,10 @@
        "<Figure size 460.8x345.6 with 1 Axes>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "execution_count": 1871,
+     "metadata": {
+     },
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1008,7 +1125,9 @@
   {
    "cell_type": "code",
    "execution_count": 1872,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1017,8 +1136,10 @@
        "<Figure size 460.8x345.6 with 1 Axes>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "execution_count": 1872,
+     "metadata": {
+     },
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1030,7 +1151,9 @@
   {
    "cell_type": "code",
    "execution_count": 1876,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1052,7 +1175,8 @@
       ]
      },
      "execution_count": 1876,
-     "metadata": {},
+     "metadata": {
+     },
      "output_type": "execute_result"
     },
     {
@@ -1062,8 +1186,10 @@
        "<Figure size 460.8x345.6 with 1 Axes>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "execution_count": 1876,
+     "metadata": {
+     },
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1072,17 +1198,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 0,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
+   "source": [
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 0,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
+   "source": [
+   ]
   }
  ],
  "metadata": {
@@ -1099,7 +1233,8 @@
     "{connection_file}"
    ],
    "display_name": "Python 3 (system-wide)",
-   "env": {},
+   "env": {
+   },
    "language": "python",
    "metadata": {
     "cocalc": {
@@ -1133,7 +1268,8 @@
       false
      ]
     ],
-    "ownerID": {}
+    "ownerID": {
+    }
    },
    "cocalc_minimal_stubs": false,
    "size": 1
